--- a/index.html
+++ b/index.html
@@ -1,9 +1,22 @@
-<html>
-  <head>
-    <title>Me</title>
-  </head>
-  <body>
-    <h1>Hello World</h1>
-    <a href="/ice-skating">ice-skating</a>
-  </body>
+<!DOCTYPE html>
+<html lang="en-gb">
+    <head>
+        <title>BunnyEars</title>
+        <link rel="stylesheet" href="styles.css" type="text/css"/>
+        <link rel="icon" src="icon.webp"/>
+    </head>
+    <body>
+        <h1>BunnyEars</h1>
+        <div id="container">
+        <div class="cards">
+            <span>Lots of words</span>
+        </div>
+        <div class="cards">
+           <span>More words</span>
+        </div>
+        <div class="cards">
+            <span>Even more words</span>
+        </div>
+        </div>
+    </body>
 </html>
