--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <title>BunnyEars</title>
         <link rel="stylesheet" href="styles.css" type="text/css"/>
-        <link rel="icon" src="icon.webp"/>
+        <link rel="icon" href="icon.webp"/>
     </head>
     <body>
         <h1>BunnyEars</h1>
