--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
         <title>BunnyEars</title>
         <link rel="stylesheet" href="styles.css" type="text/css"/>
         <link rel="icon" href="icon.webp"/>
+        <meta name="theme-color" content="#b392ef"/>
+        <style>
+            @import url('https://fonts.googleapis.com/css2?family=Signika:wght@300..700&display=swap');
+            </style>
     </head>
     <body>
         <h1>BunnyEars</h1>
@@ -16,6 +20,12 @@
         </div>
         <div class="cards">
             <span>Even more words</span>
+        </div>
+        <div class="cards">
+            <span>Lots and lots of words</span>
+        </div>
+        <div class="cards">
+            <span>We're really running out of words now</span>
         </div>
         </div>
     </body>
