--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en-gb">
     <head>
-        <title>BunnyEars</title>
+        <title>BunnyEars | Dev</title>
         <link rel="stylesheet" href="styles.css" type="text/css"/>
         <link rel="icon" href="icon.webp"/>
         <meta name="theme-color" content="#b392ef"/>
@@ -10,14 +10,25 @@
             </style>
     </head>
     <body>
+        <header>
         <h1>BunnyEars</h1>
+        <h2>Here's Some Stuff I've Made</h2>
+        </header>
         <div id="container">
-        <div class="cards">
-            <span>Lots of words</span>
+        <a href="https://bunny-ears.github.io/ice-skating" target="_blank">
+        <div class="cards" id="skating" title="Project Completed ✅">
+            <img src="https://raw.githubusercontent.com/microsoft/fluentui-emoji/main/assets/Ice%20skate/Color/ice_skate_color.svg" alt="Ice skate emoji">
+            <h3>Dare to Dream</h3>
+            <span>Videos from the December 2023 ice-skating show.</span>
         </div>
-        <div class="cards">
-           <span>More words</span>
-        </div>
+        </a>
+        <a href="https://bunnyearssite.wixsite.com/mysite-3" target="_blank">
+            <div class="cards" id="moustage" title="Project Completed ✅">
+                <img src="https://static.wixstatic.com/media/a00086d8d9204ff6a9d9e841ffee568e.png/v1/fill/w_194,h_50,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/Moustache.png" alt="Ice skate emoji">
+                <h3>The Swiss Moustage Co.</h3>
+                <span>A very real company that massages moustaches.</span>
+            </div>
+            </a>
         <div class="cards">
             <span>Even more words</span>
         </div>
