--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en-gb">
     <head>
-        <title>BunnyEars | Dev</title>
+        <title>BunnyEars</title>
         <link rel="stylesheet" href="styles.css" type="text/css"/>
         <link rel="icon" href="icon.webp"/>
         <meta name="theme-color" content="#b392ef"/>
