--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <title>BunnyEars</title>
         <link rel="stylesheet" href="styles.css" type="text/css"/>
-        <link rel="icon" href="icon.webp"/>
+        <link rel="icon" href="icon.webp" type="image/webp"/>
         <meta name="theme-color" content="#b392ef"/>
         <style>
             @import url('https://fonts.googleapis.com/css2?family=Signika:wght@300..700&display=swap');
@@ -24,14 +24,18 @@
         </a>
         <a href="https://bunnyearssite.wixsite.com/mysite-3" target="_blank">
             <div class="cards" id="moustage" title="Project Completed ✅">
-                <img src="https://static.wixstatic.com/media/a00086d8d9204ff6a9d9e841ffee568e.png/v1/fill/w_194,h_50,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/Moustache.png" alt="Ice skate emoji">
+                <div class="centre"><img src="https://static.wixstatic.com/media/a00086d8d9204ff6a9d9e841ffee568e.png/v1/fill/w_194,h_50,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/Moustache.png" alt="A graphic of a moustache"></div>
                 <h3>The Swiss Moustage Co.</h3>
                 <span>A very real company that massages moustaches.</span>
             </div>
             </a>
-        <div class="cards">
-            <span>Even more words</span>
-        </div>
+            <a href="https://bunnyearssite.wixsite.com/swissmeaty-or-energy" target="_blank">
+                <div class="cards" id="meaty" title="Project Completed ✅">
+                    <div class="centre"><img src="meaty-or-energy.webp" alt="A text logo saying meaty or energy"></div>
+                    <h3>Meaty-or-Energy </h3>
+                    <span>A very real subsidiary of The Swiss Moustage Co.</span>
+                </div>
+                </a>
         <div class="cards">
             <span>Lots and lots of words</span>
         </div>
