Added text renderer

--- a/index.html
+++ b/index.html
@@ -1,47 +1,57 @@
 <!DOCTYPE html>
 <html lang="en-gb">
-    <head>
-        <title>BunnyEars</title>
-        <link rel="stylesheet" href="styles.css" type="text/css"/>
-        <link rel="icon" href="icon.webp" type="image/webp"/>
-        <meta name="theme-color" content="#b392ef"/>
-        <style>
-            @import url('https://fonts.googleapis.com/css2?family=Signika:wght@300..700&display=swap');
-            </style>
-    </head>
-    <body>
-        <header>
+
+<head>
+    <title>BunnyEars | Dev</title>
+    <link rel="stylesheet" href="styles.css" type="text/css" />
+    <link rel="icon" href="icon.webp" type="image/webp" />
+    <meta name="theme-color" content="#b392ef" />
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Signika:wght@300..700&display=swap');
+    </style>
+</head>
+
+<body>
+    <header>
         <h1>BunnyEars</h1>
         <h2>Here's Some Stuff I've Made</h2>
-        </header>
-        <div id="container">
+    </header>
+    <div id="container">
         <a href="https://bunny-ears.github.io/ice-skating" target="_blank">
-        <div class="cards" id="skating" title="Project Completed ✅">
-            <img src="https://raw.githubusercontent.com/microsoft/fluentui-emoji/main/assets/Ice%20skate/Color/ice_skate_color.svg" alt="Ice skate emoji">
-            <h3>Dare to Dream</h3>
-            <span>Videos from the December 2023 ice-skating show.</span>
-        </div>
+            <div class="cards" id="skating" title="Project Completed ✅">
+                <img src="https://raw.githubusercontent.com/microsoft/fluentui-emoji/main/assets/Ice%20skate/Color/ice_skate_color.svg"
+                    alt="Ice skate emoji">
+                <h3>Dare to Dream</h3>
+                <span>Videos from the December 2023 ice-skating show.</span>
+            </div>
         </a>
         <a href="https://bunnyearssite.wixsite.com/mysite-3" target="_blank">
             <div class="cards" id="moustage" title="Project Completed ✅">
-                <div class="centre"><img src="https://static.wixstatic.com/media/a00086d8d9204ff6a9d9e841ffee568e.png/v1/fill/w_194,h_50,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/Moustache.png" alt="A graphic of a moustache"></div>
+                <div class="centre"><img
+                        src="https://static.wixstatic.com/media/a00086d8d9204ff6a9d9e841ffee568e.png/v1/fill/w_194,h_50,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/Moustache.png"
+                        alt="A graphic of a moustache"></div>
                 <h3>The Swiss Moustage Co.</h3>
                 <span>A very real company that massages moustaches.</span>
             </div>
-            </a>
-            <a href="https://bunnyearssite.wixsite.com/swissmeaty-or-energy" target="_blank">
-                <div class="cards" id="meaty" title="Project Completed ✅">
-                    <div class="centre"><img src="meaty-or-energy.webp" alt="A text logo saying meaty or energy"></div>
-                    <h3>Meaty-or-Energy </h3>
-                    <span>A very real subsidiary of The Swiss Moustage Co.</span>
-                </div>
-                </a>
-        <div class="cards">
-            <span>Lots and lots of words</span>
-        </div>
+        </a>
+        <a href="https://bunnyearssite.wixsite.com/swissmeaty-or-energy" target="_blank">
+            <div class="cards" id="meaty" title="Project Completed ✅">
+                <div class="centre"><img src="meaty-or-energy.webp" alt="A text logo saying meaty or energy"></div>
+                <h3>Meaty-or-Energy </h3>
+                <span>A very real subsidiary of The Swiss Moustage Co.</span>
+            </div>
+        </a>
+        <a href="https://bunny-ears.github.io/text-render" target="_blank">
+            <div class="cards" id="render" title="Work In Progress 🔨">
+                <img src="ts.svg" alt="A letter from a fanstasy language">
+                <h3>kwenVelishin Text Renderer</h3>
+                <span>Tool for writing in my fantasy language of kwenVelishin.</span>
+            </div>
+        </a>
         <div class="cards">
             <span>We're really running out of words now</span>
         </div>
-        </div>
-    </body>
+    </div>
+</body>
+
 </html>
