--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="styles.css" type="text/css" />
     <link rel="icon" href="icon.webp" type="image/webp" />
     <meta name="theme-color" content="#b392ef" />
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Signika:wght@300..700&display=swap');
     </style>
