--- a/index.html
+++ b/index.html
@@ -2,11 +2,10 @@
 <html lang="en-gb">
 
 <head>
-    <title>BunnyEars</title>
+    <title>BunnyEars [dev]</title>
     <link rel="stylesheet" href="styles.css" type="text/css" />
     <link rel="icon" href="icon.webp" type="image/webp" />
     <meta name="theme-color" content="#b392ef" />
-    <meta name="viewport" content="width=device-width, initial-scale=1">
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Signika:wght@300..700&display=swap');
     </style>
