--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en-gb">
 
 <head>
-    <title>BunnyEars [dev]</title>
+    <title>BunnyEars</title>
     <link rel="stylesheet" href="styles.css" type="text/css" />
     <link rel="icon" href="icon.webp" type="image/webp" />
     <meta name="theme-color" content="#b392ef" />
