--- a/index.html
+++ b/index.html
@@ -48,9 +48,13 @@
                 <span>Tool for writing in my fantasy language of kwenVelishin.</span>
             </div>
         </a>
-        <div class="cards">
-            <span>We're really running out of words now</span>
-        </div>
+        <a href="http://caladh.tailde0e0b.ts.net/" target="_blank">
+            <div class="cards" id="caladh" title="Work In Progress 🔨">
+                <img src="caladh.svg" alt="A minimalist logo of a cloud">
+                <h3>Caladh Cloud Server</h3>
+                <span>CasaOS home server. (Only works connected to Tailscale network.)</span>
+            </div>
+        </a>
     </div>
 </body>
 
