--- a/index.html
+++ b/index.html
@@ -55,6 +55,13 @@
                 <span>CasaOS home server. (Only works connected to Tailscale network.)</span>
             </div>
         </a>
+        <a href="https://bunny-ears.github.io/animation-old-web-project/index.html" target="_blank">
+            <div class="cards" id="animation" title="Completion not intended ☠️">
+                <img src="https://bunny-ears.github.io/animation-old-web-project/icon.svg" alt="Simple icon of a classic television">
+                <h3>Animation I Recommend</h3>
+                <span>Quick site made in CS class. Very much broken and uncompleted.</span>
+            </div>
+        </a>
     </div>
 </body>
 
