--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             <div class="cards" id="animation" title="Completion not intended ☠️">
                 <img src="https://bunny-ears.github.io/animation-old-web-project/icon.svg" alt="Simple icon of a classic television">
                 <h3>Animation I Recommend</h3>
-                <span>Quick site made in CS class. Very much broken and uncompleted.</span>
+                <span>Quick site made in CS class. Very much broken and incomplete</span>
             </div>
         </a>
     </div>
