--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                 <span>CasaOS home server. (Only works connected to Tailscale network.)</span>
             </div>
         </a>
-        <a href="https://bunny-ears.github.io/animation-old-web-project/index.html" target="_blank">
+        <a href="https://bunny-ears.github.io/animation-old-web-project/" target="_blank">
             <div class="cards" id="animation" title="Completion not intended ☠️">
                 <img src="https://bunny-ears.github.io/animation-old-web-project/icon.svg" alt="Simple icon of a classic television">
                 <h3>Animation I Recommend</h3>
