--- a/index.html
+++ b/index.html
@@ -62,6 +62,16 @@
                 <span>Quick site made in CS class. Very much broken and incomplete</span>
             </div>
         </a>
+        <a href="https://bunny-ears.github.io/Sorry" target="_blank">
+            <div class="cards" id="sorry" title="Project Completed ✅">
+                <div class="centre"><img
+                        src="https://bunny-ears.github.io/Sorry/jar.webp"
+                        alt="A graphic of a mason jar"></div>
+                <h3>Sorry Jar</h3>
+                <span>Store all of your sorrys.</span>
+            </div>
+        </a>
+
     </div>
 </body>
 
